<resources>
    <string name="app_name" translatable="false">OwlDiary</string>
    <string name="create_and_edit_title">Event edit</string>
    <string name="calendar_label">Calendar</string>
    <string name="settings_label">Settings</string>
    <string name="note_label">Notes</string>
    <string name="create_and_edit_note_title">Title…</string>
    <string name="bottom_menu_reminders_title">Bottom menu reminders</string>
    <string name="bottom_menu_calendar_title">Bottom menu calendar</string>
    <string name="bottom_menu_settings_title">Bottom menu settings</string>
    <string name="bottom_menu_add_title">Bottom menu add</string>
    <string name="bottom_menu_notes_title">Bottom menu notes</string>
    <string name="note_list_fab">Create new note</string>
    <string name="reminder_list_fab">Create new reminder</string>
    <string name="type_something">Type something…</string>
    <string name="reminder_start_title">Start</string>
    <string name="reminder_date_and_time_divider_description">Date and time divider</string>
    <string name="reminder_end_title">End</string>
    <string name="reminder_location_title">Location</string>
    <string name="reminder_note_title">Note</string>
    <string name="reminder_settings_title">Settings</string>
    <string name="reminder_repeat_title">Repeat</string>
    <string name="reminder_notifications_title">Notifications</string>
    <string name="reminder_attachment_title">Attachment</string>
    <string name="bottom_sheet_create_reminder_title">Create</string>
    <string name="bottom_sheet_choose_color_title">Choose color</string>
    <string name="bottom_sheet_choose_date_title">Choose date</string>
    <string name="bottom_sheet_choose_time_title">Choose time</string>
    <string name="bottom_sheet_choose_note_title">Note</string>
    <string name="bottom_sheet_choose_repeat_title">Choose repeat</string>
    <string name="bottom_sheet_choose_notification_title">Choose notification</string>
    <string name="bottom_sheet_choose_location_title">Choose location</string>
    <string name="bottom_sheet_cover_title">Choose cover</string>
    <string name="confirm">Confirm</string>
    <string name="update">Update</string>
    <string name="bottom_sheet_colon">:</string>
    <string name="never">Never</string>
    <string name="every_day">Every day</string>
    <string name="every_second_day">Every second day</string>
    <string name="every_week">Every week</string>
    <string name="every_second_week">Every second week</string>
    <string name="every_month">Every month</string>
    <string name="every_year">Every year</string>
    <string name="at_time_of_event">At the time of event</string>
    <string name="ten_minute_before">10 minute before</string>
    <string name="thirty_minute_before">30 minute before</string>
    <string name="one_hour_before">1 hour before</string>
    <string name="one_day_before">1 day before</string>
    <string name="one_week_before">1 week before</string>
    <string name="one_month_before">1 month before</string>
    <string name="next_month_button">Next month</string>
    <string name="prev_month_button">Prev month</string>
    <string name="complete_event_cd">Complete event</string>
    <string name="reminder_icon">Reminder icon</string>
    <string name="from">From</string>
    <string name="to">to</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="yesterday">Yesterday</string>
    <string name="input_empty_error">Title cannot be empty</string>
    <string name="attachment_cover_title">Cover</string>
    <string name="attachment_image_title">Image</string>
    <string name="attachment_video_title">Video</string>
    <string name="attachment_audio_title">Audio</string>
    <string name="attachment_file_title">File</string>
    <string name="bottom_sheet_choose_cover_title">Choose cover</string>
    <string name="bottom_sheet_choose_image_title">Choose photo</string>
    <string name="bottom_sheet_choose_video_title">Choose video</string>
    <string name="cover_delete_button">Cover delete</string>
    <string name="permission_not_granted"><u>Click to allow access to the gallery</u></string>
    <string name="settings_button_title">Settings</string>
    <string name="cancel_button_title">Not now</string>
    <string name="permission_dialog_title">Need permission</string>
    <string name="until">" until "</string>
    <string name="permission_dialog_text">To add attachments, you must grant permission to access photos, videos, audio, and music. Tap > settings > permissions and allow access to <u>files and media</u></string>

    <string name="search_hint">Party</string>

    <string name="add_event_icon">Add event icon</string>
    <string name="add_reminder_icon">Add reminder icon</string>
    <string name="add_task_icon">Add task icon</string>

    <!--Notification titles-->
    <string name="attachment_message">Copy attachments %1d out of %2d</string>

    <!--Notification Subtitles-->
    <string name="notification_string">"Ringtone: %1s, Vibration: $2s, Priority: %3s, Light: %4s"</string>
    <string name="state_on">On</string>
    <string name="state_off">Off</string>

    <!--Screen titles-->
    <string name="event_title">Event</string>
    <string name="task_title">Task</string>
    <string name="reminder_title">Reminder</string>

    <!--Dialog titles-->
    <string name="warning_dialog_title">Discard selection?</string>

    <!--Dialog message-->
    <string name="warning_dialog_message">Do you want to discard the selection?</string>

    <!--Dialog button titles-->
    <string name="discard_button">Discard</string>
    <string name="cancel_button">Cancel</string>

    <!--Block titles-->
    <string name="current_location">Current location</string>
    <string name="results">Results</string>
    <string name="recent">Recent locations</string>
    <string name="reminder_all_day">All day?</string>
    <string name="reminder_task_deadline">Deadline</string>
    <string name="reminder_reminder_date">Date</string>
    <string name="notification_event">Event</string>
    <string name="notification_task">Task</string>
    <string name="notification_reminder">Reminder</string>

    <!--Big block title-->
    <string name="theme">Theme</string>
    <string name="icons">Icons</string>
    <string name="notification">Notifications</string>

    <!--Edit text Hint-->
    <string name="input_address">Input address</string>

    <string name="internal_storage">Internal storage</string>
    <string name="internal_storage_subtitle">Add file from your device</string>
    <string name="add_file_rv_title">Recent files</string>

    <!--Note tools-->
    <string name="note_tools_font_bol">Font Bold</string>
    <string name="note_tools_font_italic">Font Italic</string>
    <string name="note_tools_font_underline">Font Underline</string>
    <string name="note_tools_add_dot_list">Add dot list</string>
    <string name="note_tools_add_numeric_list">Add numeric list</string>
    <string name="note_tools_add_todo">Add todo</string>
    <string name="note_tools_attach_image">Attach image</string>
    <string name="note_tools_attach_draw">Attach draw</string>
    <string name="note_tools_attach_voice">Attach voice</string>
    <string name="note_tools_choose_color">Choose color</string>

    <!--Notification chanel name-->
    <string name="attachment_chanel_name">Attachment copy progress</string>
    <string name="event_chanel_name">Events</string>
    <string name="task_chanel_name">Task</string>
    <string name="reminder_chanel_name">Reminder</string>
    <string name="event_chanel_group">Reminders</string>

    <!--Notification descriptions-->
    <string name="attachment_description">Visual display of copying attachments</string>
    <string name="event_description">New event notifications</string>
    <string name="task_description">Current task notifications</string>
    <string name="reminder_description">Reminder notifications</string>

    <!--Snackbar message-->
    <string name="event_created">%1$s created!</string>
    <string name="event_updated">%1$s updated!</string>
    <string name="event_deleted">%1$s deleted!</string>
    <string name="undo">Undo</string>
    <string name="empty_search">Nothing found</string>

    <string-array name="days_in_week">
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
        <item>S</item>
    </string-array>

</resources>