<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="ru.madmax.madDiary.featureReminders.presentation.bottomsheet.BottomSheetCreateReminderChooseRepeatFragment">

    <View
        android:id="@+id/bottom_sheet_repeat_handle"
        style="@style/BottomSheetHandle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bottom_sheet_repeat_title"
        style="@style/ReminderBlockBigTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/bottom_sheet_choose_repeat_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_repeat_handle" />

    <RadioGroup
        android:id="@+id/bottom_sheet_repeat_rb_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"
        android:checkedButton="@id/bottom_sheet_repeat_never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_repeat_title">

        <RadioButton
            android:id="@+id/bottom_sheet_repeat_never"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/never" />

        <RadioButton
            android:id="@+id/bottom_sheet_repeat_every_day"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/every_day" />

        <RadioButton
            android:id="@+id/bottom_sheet_repeat_every_second_day"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/every_second_day" />

        <RadioButton
            android:id="@+id/bottom_sheet_repeat_every_week"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/every_week" />

        <RadioButton
            android:id="@+id/bottom_sheet_repeat_every_month"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/every_month" />

        <RadioButton
            android:id="@+id/bottom_sheet_repeat_every_year"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/every_year" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>