<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="40dp"
    tools:context="ru.lopata.madDiary.featureReminders.presentation.dialogs.bottomSheet.BottomSheetChooseReminderTypeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/bottom_sheet_create_reminder_event_root"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/bottom_sheet_create_reminder_event_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                app:cardBackgroundColor="@color/metallic_seaweed"
                app:cardCornerRadius="15dp">

                <ImageView
                    style="@style/ButtonIconColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/add_event_icon"
                    android:src="@drawable/ic_add_event" />

            </androidx.cardview.widget.CardView>

            <TextView
                style="@style/CreateReminderChooseTypeTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/event_title" />

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1" />


        <LinearLayout
            android:id="@+id/bottom_sheet_create_reminder_reminder_root"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/bottom_sheet_create_reminder_reminder_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                app:cardBackgroundColor="@color/metallic_seaweed"
                app:cardCornerRadius="15dp">

                <ImageView
                    style="@style/ButtonIconColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/add_reminder_icon"
                    android:src="@drawable/ic_add_reminder" />

            </androidx.cardview.widget.CardView>

            <TextView
                style="@style/CreateReminderChooseTypeTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/reminder_title" />

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/bottom_sheet_create_reminder_task_root"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/bottom_sheet_create_reminder_task_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                app:cardBackgroundColor="@color/metallic_seaweed"
                app:cardCornerRadius="15dp">

                <ImageView
                    style="@style/ButtonIconColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/add_task_icon"
                    android:src="@drawable/ic_add_task" />

            </androidx.cardview.widget.CardView>

            <TextView
                style="@style/CreateReminderChooseTypeTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/task_title" />

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>