<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".featureReminders.presentation.dialogs.bottomSheet.BottomSheetAddNoteFragment">

    <View
        android:id="@+id/bottom_sheet_note_handle"
        style="@style/BottomSheetHandle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bottom_sheet_note_title"
        style="@style/DialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/bottom_sheet_choose_note_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_note_handle" />

    <EditText
        android:id="@+id/bottom_sheet_note_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:autofillHints="null"
        android:background="@color/transparent"
        android:fontFamily="@font/blogger_sans_medium"
        android:gravity="top"
        android:hint="@string/type_something"
        android:inputType="textCapSentences|textMultiLine"
        android:minHeight="300dp"
        android:textColorHint="@color/gray_chateau"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_note_title"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bottom_sheet_note_choose_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:background="@drawable/rounded_button_ripple_effect"
        android:fontFamily="@font/blogger_sans_bold"
        android:letterSpacing="0"
        android:paddingHorizontal="120dp"
        android:paddingVertical="12dp"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@color/mercury"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_note_content" />

</androidx.constraintlayout.widget.ConstraintLayout>